--- a/guides/core-workflows/writing-unit-tests.mdx
+++ b/guides/core-workflows/writing-unit-tests.mdx
@@ -1,265 +1,204 @@
 ---
-title: "Writing and Running Unit Tests"
-description: "Step-by-step instructions for writing effective unit tests with GoogleTest, including test suites, assertions, test runners, and best practices for code organization and maintainability."
+title: "Writing and Running Your First Unit Test"
+description: "A beginner-friendly walkthrough illustrating how to write your first unit test in C++ using GoogleTest, including test discovery, structuring test cases, and running the test suite. Learn how GoogleTest simplifies the setup–run–verify workflow and see immediate output on test success or failure."
 ---
 
-# Writing and Running Unit Tests with GoogleTest
+# Writing and Running Your First Unit Test
 
-## Overview
-
-GoogleTest provides a powerful, flexible framework to write and run unit tests in C++. This guide focuses specifically on how to write effective unit tests using GoogleTest, organize them into test suites, apply assertions to validate your code, and execute tests with the built-in test runner. You'll also learn best practices for structuring your test code to improve maintainability and clarity.
-
----
-
-## 1. What You Will Achieve
-
-- **Write meaningful unit tests** to verify your C++ code behavior.
-- **Organize tests into suites** for modular and maintainable verification.
-- **Use assertions effectively** to check conditions and catch regressions.
-- **Run tests with the GoogleTest runner** and interpret results.
-- **Adopt best practices** to keep your test code clean and reusable.
-
-## 2. Prerequisites
-
-- You must have GoogleTest installed in your development environment.
-- Your project should be configured with a build system compatible with GoogleTest (e.g., CMake or Bazel).
-- Basic knowledge of C++ syntax and programming.
-- Familiarity with command-line interface for building and running tests.
+Welcome to your first practical step with GoogleTest! This guide walks you through writing a simple C++ unit test, running it, and interpreting the results. You'll quickly learn how GoogleTest simplifies the test creation, discovery, and execution workflow while providing immediate feedback on your test's success or failure.
 
 ---
 
-## 3. Writing Unit Tests: Step-by-Step
+## What You'll Accomplish
 
-### 3.1 Define a Test
+- Write a basic test case using GoogleTest's `TEST` macro.
+- Compile your test into an executable.
+- Run the test suite and observe output feedback.
+- Understand how GoogleTest discovers and runs tests automatically.
 
-To create a unit test, use the `TEST` macro to define a test case and its individual test:
+## Prerequisites
 
-```cpp
-TEST(TestSuiteName, TestName) {
-  // Your test code here
-  EXPECT_EQ(function_under_test(), expected_value);
-}
-```
-
-- **TestSuiteName** groups related tests logically.
-- **TestName** identifies the individual test.
-
-**Example:**
-
-```cpp
-TEST(MathTest, FactorialOfZero) {
-  EXPECT_EQ(Factorial(0), 1);
-}
-```
-
-### 3.2 Using Test Fixtures
-
-For tests that need common setup or shared objects, define a test fixture by subclassing `testing::Test`:
-
-```cpp
-class MyTestFixture : public testing::Test {
- protected:
-  void SetUp() override {
-    // Setup code here
-  }
-
-  void TearDown() override {
-    // Cleanup code here
-  }
-
-  // Shared data members
-};
-```
-
-Then, write tests using the fixture with `TEST_F`:
-
-```cpp
-TEST_F(MyTestFixture, TestName) {
-  // Test code using shared members
-  EXPECT_TRUE(condition);
-}
-```
+- A working C++17-compatible compiler installed.
+- GoogleTest library installed and properly linked in your build environment.
+- Basic familiarity with C++ syntax.
+- Recommended: Review the [System Requirements](https://github.com/google/googletest/blob/main/docs/getting-started/prerequisites-installation/system-requirements.md) and installation guides if not already done.
 
 ---
 
-## 4. Using Assertions
+## Getting Started: Write Your First Test
 
-Assertions examine your test conditions and determine if the test passes or fails.
+1. **Include GoogleTest Header**
 
-### 4.1 Assertion Types
+    Begin your test file by including the core GoogleTest header:
 
-- **Fatal assertions (`ASSERT_*`)** abort the current function on failure.
-- **Nonfatal assertions (`EXPECT_*`)** continue the test even if they fail.
+    ```cpp
+    #include <gtest/gtest.h>
+    ```
 
-### 4.2 Common Assertions
+2. **Define a Test Case Using `TEST` Macro**
 
-| Macro           | Description                              | Usage Example                    |
-|-----------------|------------------------------------------|--------------------------------|
-| `EXPECT_EQ`     | Checks equality of two values            | `EXPECT_EQ(a, b);`               |
-| `ASSERT_NE`     | Checks inequality                        | `ASSERT_NE(ptr, nullptr);`       |
-| `EXPECT_TRUE`   | Checks if a condition is true            | `EXPECT_TRUE(is_valid);`         |
-| `ASSERT_FALSE`  | Checks if a condition is false           | `ASSERT_FALSE(has_error);`       |
-| `EXPECT_STREQ`  | Checks two C strings are equal by content | `EXPECT_STREQ(str1, str2);`    |
-| `EXPECT_FLOAT_EQ` | Checks approximate equality for floats | `EXPECT_FLOAT_EQ(f1, f2);`    |
+    Use the `TEST` macro to define a test. The macro takes two parameters: the test suite name and the test name. Both must be valid C++ identifiers and avoid underscores.
 
-### 4.3 Streaming Custom Failure Messages
+    ```cpp
+    TEST(FactorialTest, HandlesZeroInput) {
+      EXPECT_EQ(Factorial(0), 1);
+    }
 
-You can append custom messages to assertions to clarify failures:
+    TEST(FactorialTest, HandlesPositiveInput) {
+      EXPECT_EQ(Factorial(1), 1);
+      EXPECT_EQ(Factorial(2), 2);
+      EXPECT_EQ(Factorial(3), 6);
+    }
+    ```
 
-```cpp
-EXPECT_EQ(x, expected) << "x should be " << expected << " but was " << x;
-```
+    - Each test is an independent function.
+    - `EXPECT_EQ` is an assertion that tests whether the two values are equal.
+    - If an assertion fails, that test fails; if all assertions pass, the test passes.
 
----
+3. **Compile Your Test Program**
 
-## 5. Organizing Tests into Test Suites
+    Compile your test with the GoogleTest library. Example `g++` command:
 
-Group your related tests into test suites for logical organization and shared setup.
+    ```bash
+    g++ -std=c++17 -isystem /path/to/gtest/include -pthread your_test.cpp \
+        /path/to/libgtest.a /path/to/libgtest_main.a -o your_test
+    ```
 
-- Use the same **TestSuiteName** in the `TEST` macro to group tests.
-- Use **fixtures** (`TEST_F`) to share common setup and teardown logic.
+    Adapt paths and build commands according to your environment and build system.
 
-**Example:**
+4. **Write `main()` to Run Tests**
 
-```cpp
-TEST(MathTest, Addition) { EXPECT_EQ(Add(2, 3), 5); }
-TEST(MathTest, Subtraction) { EXPECT_EQ(Sub(10, 3), 7); }
-```
+    If not linking against `gtest_main`, add the following to your test program:
 
-```cpp
-// With a fixture
-class QueueTest : public testing::Test {
- protected:
-  Queue<int> q;
-  void SetUp() override {
-    // Initialize queue before each test
-    q.Enqueue(1);
-  }
-};
+    ```cpp
+    int main(int argc, char** argv) {
+      ::testing::InitGoogleTest(&argc, argv);
+      return RUN_ALL_TESTS();
+    }
+    ```
 
-TEST_F(QueueTest, EmptyAfterDequeue) {
-  int* n = q.Dequeue();
-  ASSERT_NE(n, nullptr);
-  EXPECT_EQ(*n, 1);
-  delete n;
-  EXPECT_TRUE(q.IsEmpty());
-}
-```
+    - `InitGoogleTest` initializes the test framework and processes command-line flags.
+    - `RUN_ALL_TESTS` runs all tests registered via the `TEST` macro and returns `0` on success.
 
 ---
 
-## 6. Running Tests
+## Running and Verifying Your Test Suite
 
-Compile your test executable with GoogleTest linked. Then run the binary:
+Execute your compiled test binary:
 
 ```bash
-./my_test_executable
+./your_test
 ```
 
-- GoogleTest will automatically discover and run all tests defined with `TEST` or `TEST_F`.
-- The output shows each test result, duration, and failures.
-- Use command-line flags to filter tests or change behavior:
-  - `--gtest_filter=TestSuiteName.TestName` to run specific tests.
-  - `--gtest_repeat=N` to run tests multiple times.
-  - `--gtest_color=yes` to enable colored output.
+### Expected Output on Success
 
----
+```
+[==========] Running 2 tests from 1 test suite.
+[----------] Global test environment set-up.
+[----------] 2 tests from FactorialTest
+[ RUN      ] FactorialTest.HandlesZeroInput
+[       OK ] FactorialTest.HandlesZeroInput (0 ms)
+[ RUN      ] FactorialTest.HandlesPositiveInput
+[       OK ] FactorialTest.HandlesPositiveInput (0 ms)
+[----------] 2 tests from FactorialTest (0 ms total)
 
-## 7. Best Practices for Test Design
-
-- **Name test suites and tests clearly** to reflect their purpose.
-- **Isolate tests:** each test should be independent and repeatable.
-- **Prefer nonfatal assertions (`EXPECT_*`)** when possible, to see all failures.
-- **Use fixtures for shared setup/cleanup**, but remember each test gets a fresh fixture instance.
-- **Keep tests small and focused**; one logical assertion per test is ideal.
-- **Use `SCOPED_TRACE`** to add contextual information in failure messages when testing loops or subroutines.
-
----
-
-## 8. Examples
-
-### 8.1 Basic Test
-
-```cpp
-TEST(FactorialTest, HandlesZeroInput) {
-  EXPECT_EQ(Factorial(0), 1);
-}
+[----------] Global test environment tear-down
+[==========] 2 tests from 1 test suite ran. (0 ms total)
+[  PASSED  ] 2 tests.
 ```
 
-### 8.2 Using a Fixture
+### What This Means
 
-```cpp
-class StackTest : public testing::Test {
- protected:
-  std::stack<int> s;
+- Tests were executed and reported with verbose output.
+- `OK` indicates test success; failures will be reported explicitly with details.
+- Total execution time is shown.
 
-  void SetUp() override {
-    s.push(42);
-  }
-};
+### On Failure
 
-TEST_F(StackTest, TopReturnsLastPushedValue) {
-  EXPECT_EQ(s.top(), 42);
-}
+If a test fails, GoogleTest prints the failing assertion location, the expected and actual values, and a failure summary. For example:
 
-TEST_F(StackTest, PopRemovesElement) {
-  s.pop();
-  EXPECT_TRUE(s.empty());
-}
 ```
-
-### 8.3 Using Assertions with Custom Message
-
-```cpp
-TEST(MathTest, Division) {
-  int divisor = 0;
-  ASSERT_NE(divisor, 0) << "Divisor must not be zero";
-  EXPECT_EQ(Divide(10, divisor), 5);
-}
+path/to/your_test.cpp:10: Failure
+Expected equality of these values:
+  Factorial(0)
+    Which is: 0
+  1
 ```
 
 ---
 
-## 9. Troubleshooting Tips
+## How GoogleTest Discovers Tests
 
-- Ensure your test fixture classes have a default constructor; GoogleTest needs to instantiate them.
-- Avoid underscores in test suite and test names to prevent naming conflicts.
-- Use `ASSERT_*` assertions carefully, as they abort the current function, potentially skipping cleanup.
-- Use `EXPECT_*` when you want tests to continue after failure.
-- If you encounter "uninteresting mock function call" warnings (in mock-enabled tests), consider using `NiceMock` to suppress noise.
-- Verify your build configuration to ensure GoogleTest and your tests compile and link correctly.
+GoogleTest automatically discovers tests defined with the `TEST` and `TEST_F` macros at runtime:
 
----
+- Each `TEST` macro registers a test case in the global test registry.
+- `RUN_ALL_TESTS()` sequentially invokes each test via this registry.
+- No explicit test registration or enumeration is needed.
 
-## 10. Next Steps & Further Reading
-
-- Explore [Writing Your First Test](https://yourdocs/getting-started/first-test-experience/hello-test) to start with simple test examples.
-- Learn about [Test Fixtures](https://yourdocs/overview/core-concepts/core-concepts-terminology) for shared setup.
-- Advance to [Using Assertions Effectively](https://yourdocs/guides/core-workflows/using-assertions) for mastering validation.
-- Read about [Mocking with GoogleMock](https://yourdocs/guides/advanced-testing-patterns/mocking-with-googlemock) to handle dependencies.
-- Check out the [Testing Reference](https://yourdocs/docs/reference/testing) for comprehensive macro and API details.
-
+To control which tests run, use command-line flags (e.g., `--gtest_filter`).
 
 ---
 
-## Additional Tips
+## Practical Tips for Your First Test
 
-- Always check the return value of `RUN_ALL_TESTS()` in your `main()` function to ensure test correctness.
-- Customize test behavior with command-line options for better control during development.
-- Use the rich set of assertions to make your tests expressive and informative.
-- Modularize complex tests using fixtures and parameterized tests to avoid duplication.
+- Name test suites and tests clearly, reflecting the code behavior under test.
+- Use `EXPECT_*` assertions to verify expected outcomes; prefer `ASSERT_*` if the test cannot proceed on failure.
+- Test one logical condition per test to keep failures clear and isolated.
+- Keep tests independent from each other.
+- Use `RUN_ALL_TESTS()` only once in your `main()`.
 
-```cpp
-int main(int argc, char **argv) {
-  ::testing::InitGoogleTest(&argc, argv);
-  return RUN_ALL_TESTS();
-}
+---
+
+## Troubleshooting Common Issues
+
+<AccordionGroup title="Common Problems Running Your First Test">
+<Accordion title="Linker Errors Related to GoogleTest">
+Ensure you link both `gtest` and `gtest_main` libraries or provide your own `main()`. Confirm library paths.
+</Accordion>
+<Accordion title="Tests Not Being Discovered or Executed">
+Verify all test files are compiled and linked. Confirm `TEST` macros are used correctly. Use `--gtest_list_tests` to see recognized tests.
+</Accordion>
+<Accordion title="Failing to Initialize GoogleTest">
+Always call `testing::InitGoogleTest` before `RUN_ALL_TESTS()`. On Windows, choose the appropriate `InitGoogleTest` overload.
+</Accordion>
+</AccordionGroup>
+
+<Tip>
+You can run `./your_test --help` to see GoogleTest-specific command line options, such as filtering tests, repeating tests, and output formats.
+</Tip>
+
+---
+
+## Next Steps
+
+- Explore [Test Discovery and Execution](../getting-started/first-test-setup/test-discovery-execution.md) to learn more about tests filtering and controlling execution.
+- Learn how to organize multiple related tests using [Test Fixtures (`TEST_F`)](../docs/primer.md#same-data-multiple-tests).
+- Deep dive into [Assertions](https://github.com/google/googletest/blob/main/docs/api-reference/googletest-core-apis/assertions-reference.md) for verifying complex behaviors.
+- When ready, explore GoogleMock features for mocking dependencies with [Getting Started with Mocking](../guides/core-workflows/introduction-to-mocking.md).
+
+---
+
+## Useful Resources
+
+- [Writing and Running Your First Test Guide](https://github.com/google/googletest/blob/main/docs/getting-started/first-test-setup/writing-running-first-test.md)
+- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md)
+- [GoogleTest System Requirements](https://github.com/google/googletest/blob/main/docs/getting-started/prerequisites-installation/system-requirements.md)
+- GoogleTest Git repository: [https://github.com/google/googletest](https://github.com/google/googletest)
+
+---
+
+## Summary Chart: Test Development Flow
+
+```mermaid
+graph TD
+    A[Write Test with TEST macro] --> B[Compile with GoogleTest]
+    B --> C[Run Test Executable]
+    C --> D{Test Passed?}
+    D -->|Yes| E[Celebrate Success]
+    D -->|No| F[Review Assertion Failures]
+    F --> A
 ```
 
-This completes your introduction to writing and running unit tests with GoogleTest.
-
 ---
 
-For full API details, visit the [GoogleTest Testing Reference](https://github.com/google/googletest/blob/main/docs/reference/testing.md).
-
----
+Embark on your journey to robust and maintainable C++ testing with GoogleTest—your foundational skill for confident software development.
