--- a/guides/core-workflows/using-assertions.mdx
+++ b/guides/core-workflows/using-assertions.mdx
@@ -1,275 +1,194 @@
 ---
 title: "Using Assertions Effectively"
-description: "Master the versatility of GoogleTest assertions—from equality and exception checks to custom conditions—so you can express intent clearly and catch failures with actionable output."
+description: "Deep dive into standard and advanced assertion macros provided by GoogleTest. Understand equality, inequality, exception, fatal vs. non-fatal assertions, and how their proper use improves code quality and test diagnostics. Learn when and how to craft expressive, maintainable assertions for robust test outcomes."
 ---
 
 # Using Assertions Effectively
 
-Master the versatility of GoogleTest assertions—from equality and exception checks to custom conditions—so you can express intent clearly and catch failures with actionable output.
-
----
-
 ## Workflow Overview
 
-### Task Description
-This guide helps you leverage GoogleTest assertions effectively to write clear, robust, and maintainable unit tests. You'll learn how to apply a variety of assertions—from simple Boolean checks to complex predicate and exception assertions—to express precise test intent and get meaningful feedback on failures.
+Assertions form the backbone of your test validations in GoogleTest. This guide takes you through the standard and advanced assertion macros that GoogleTest provides, teaching you how to craft precise, maintainable, and expressive checks in your C++ test code.
 
-### Prerequisites
-- A working GoogleTest installation and project setup.
-- Basic knowledge of writing tests using GoogleTest.
-- Access to `#include <gtest/gtest.h>` in your test files.
+**Prerequisites:**
+- Basic familiarity with GoogleTest and test writing.
+- Access to GoogleTest headers via `#include <gtest/gtest.h>`.
 
-### Expected Outcome
-By following this guide, you will be able to:
-- Use assertion macros properly to verify code correctness.
-- Distinguish between fatal and nonfatal assertions and choose appropriately.
-- Utilize different types of assertions, including binary comparison, string comparisons, floating-point comparisons, exception handling, predicate-based, and death assertions.
-- Write assertions with custom failure messages and understand default behaviors.
+**Expected Outcome:**
+- You will understand the difference between fatal and non-fatal assertions.
+- Gain proficiency with various assertion macros: equality, inequality, boolean, string, exception, and death assertions.
+- Learn how to improve diagnostics with expressive failure messages.
 
-### Time Estimate
-Approximately 20-30 minutes to review and practice key assertion types.
+**Time Estimate:** 30–45 minutes to read and experiment.
 
-### Difficulty Level
-Beginner to Intermediate
+**Difficulty Level:** Intermediate (some knowledge of C++ testing concepts assumed).
 
 ---
 
-## Guide to Using Assertions
+## Step-by-Step Instructions
 
-GoogleTest provides an extensive set of assertion macros and utilities, allowing test authors to express expectations in a way that best fits their test scenario. This guide walks you through practical uses and best practices.
+### 1. Choose Between Fatal and Non-Fatal Assertions
 
-### 1. Understanding Assertion Types: EXPECT_ vs ASSERT_
+GoogleTest assertions come in pairs:
+- `EXPECT_*`: Generates a **non-fatal failure**, allowing the test to continue.
+- `ASSERT_*`: Generates a **fatal failure**, immediately aborting the current test function.
 
-- **EXPECT_ assertions** produce *nonfatal* failures, allowing the test function to continue running. Use these when you want to check multiple conditions without aborting on first failure.
-- **ASSERT_ assertions** produce *fatal* failures and immediately abort the current test function. Use these when further progress depends on a precondition (e.g., valid object construction).
+**Use fatal assertions** when further test steps depend on successful verification (e.g., testing preconditions).
 
-**Example:**
+**Use non-fatal assertions** to continue verifying multiple conditions within a test.
+
+### 2. Use Basic Boolean Assertions
+
+- `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)` verify that a condition is `true`.
+- `EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)` verify that a condition is `false`.
+
+*Example:*
 ```cpp
-EXPECT_TRUE(is_valid) << "Validation failed.";  // Test continues even if false.
-ASSERT_TRUE(is_initialized) << "Initialization failed.";  // Test stops if false.
+EXPECT_TRUE(IsPrime(7)) << "7 should be prime";
+ASSERT_FALSE(IsPrime(9)) << "9 should not be prime";
 ```
 
-### 2. Explicit Success and Failure
+### 3. Use Binary Comparison Assertions for Value Checks
 
-Sometimes, success or failure depends on flow rather than a Boolean condition.
+GoogleTest provides common macros for comparing values:
 
-- Use `SUCCEED()` to explicitly mark a successful assertion (does not guarantee overall test success).
-- Use `FAIL()` to generate a fatal failure unconditionally.
-- Use `ADD_FAILURE()` to add a nonfatal failure unconditionally.
+| Macro           | Meaning                  | Usage Example                      |
+|-----------------|--------------------------|-----------------------------------|
+| `EXPECT_EQ(a, b)` / `ASSERT_EQ(a, b)` | Check if `a == b`        | `EXPECT_EQ(5, Compute());`         |
+| `EXPECT_NE(a, b)` / `ASSERT_NE(a, b)` | Check if `a != b`        | `EXPECT_NE(ptr, nullptr);`         |
+| `EXPECT_LT(a, b)` / `ASSERT_LT(a, b)` | Check if `a < b`         | `EXPECT_LT(value, 10);`            |
+| `EXPECT_LE(a, b)` / `ASSERT_LE(a, b)` | Check if `a <= b`        | `EXPECT_LE(size, max_size);`       |
+| `EXPECT_GT(a, b)` / `ASSERT_GT(a, b)` | Check if `a > b`         | `EXPECT_GT(count, 0);`             |
+| `EXPECT_GE(a, b)` / `ASSERT_GE(a, b)` | Check if `a >= b`        | `EXPECT_GE(score, passing_score);` |
 
-**Example:**
+**Note:** For pointer comparison, use `nullptr` instead of `NULL`.
+
+### 4. Use String Comparison Assertions for C-Strings
+
+When comparing C strings (`const char*`), use:
+- `EXPECT_STREQ(str1, str2)` / `ASSERT_STREQ(str1, str2)`: check equal contents.
+- `EXPECT_STRNE(str1, str2)` / `ASSERT_STRNE(str1, str2)`: check different contents.
+- `EXPECT_STRCASEEQ(str1, str2)` / `ASSERT_STRCASEEQ(str1, str2)`: equal, case insensitive.
+- `EXPECT_STRCASENE(str1, str2)` / `ASSERT_STRCASENE(str1, str2)`: different, case insensitive.
+
+*Example:*
 ```cpp
-switch (status) {
-  case OK:
-    SUCCEED();  // Document that this branch corresponds to success.
+EXPECT_STREQ(greeting.c_str(), "hello");
+EXPECT_STRNE(input, "exit");
+```
+
+### 5. Use Floating-Point Assertions for Approximate Equality
+
+Because floating-point calculations can suffer rounding errors, do not use `EXPECT_EQ` directly for floats/doubles. Instead use:
+
+- `EXPECT_FLOAT_EQ(val1, val2)` / `ASSERT_FLOAT_EQ(val1, val2)` for `float`.
+- `EXPECT_DOUBLE_EQ(val1, val2)` / `ASSERT_DOUBLE_EQ(val1, val2)` for `double`.
+- `EXPECT_NEAR(val1, val2, abs_error)` / `ASSERT_NEAR(val1, val2, abs_error)` use specified absolute error bound.
+
+*Example:*
+```cpp
+EXPECT_NEAR(calculatePi(), 3.14159, 0.0001);
+```
+
+### 6. Use Exception Assertions to Verify Exception Behavior
+
+You can verify whether code throws exceptions as expected:
+
+- `EXPECT_THROW(statement, exception_type)` / `ASSERT_THROW(statement, exception_type)`: expects specific exception type.
+- `EXPECT_ANY_THROW(statement)` / `ASSERT_ANY_THROW(statement)`: expects any exception.
+- `EXPECT_NO_THROW(statement)` / `ASSERT_NO_THROW(statement)`: expects no exception.
+
+*Example:*
+```cpp
+EXPECT_THROW(ParseFile("missing.txt"), std::runtime_error);
+EXPECT_NO_THROW(ProcessData());
+```
+
+### 7. Use Explicit Success and Failure Assertions
+
+- `SUCCEED()`: Marks success explicitly; useful for documenting test control flow.
+- `FAIL()`: Generates an immediate fatal failure; useful in default clauses.
+
+*Example:*
+```cpp
+switch (state) {
+  case START:
+    ...
     break;
   default:
-    FAIL() << "Unexpected status code: " << status;
+    FAIL() << "Unexpected state";
 }
 ```
 
-### 3. Boolean Condition Assertions
+### 8. Add Custom Failure Messages
 
-- `EXPECT_TRUE(condition)` and `ASSERT_TRUE(condition)` check that `condition` is true.
-- `EXPECT_FALSE(condition)` and `ASSERT_FALSE(condition)` check that `condition` is false.
-
-Use these for simple Boolean validations.
-
-### 4. Binary Comparison Assertions
-
-Use these to compare values with standard operators:
-- `EXPECT_EQ(expected, actual)` / `ASSERT_EQ(expected, actual)` — equality (`==`)
-- `EXPECT_NE`/`ASSERT_NE` — inequality (`!=`)
-- `EXPECT_LT`/`ASSERT_LT` — less than
-- `EXPECT_LE`/`ASSERT_LE` — less than or equal to
-- `EXPECT_GT`/`ASSERT_GT` — greater than
-- `EXPECT_GE`/`ASSERT_GE` — greater than or equal to
-
-**Important:**
-- For pointers, `EXPECT_EQ` compares addresses, not pointed-to content.
-- For C strings (`const char*`), use string-specific assertions (see below).
-
-**Example:**
-```cpp
-EXPECT_EQ(42, result) << "Result does not equal 42";
-ASSERT_LT(value, max_limit);
-```
-
-### 5. String Comparison Assertions (C-strings)
-
-GoogleTest distinguishes **C strings** from objects like `std::string`.
-
-Use these when comparing `const char*` or `wchar_t*`:
-- `EXPECT_STREQ(str1, str2)` — strings have the same content.
-- `EXPECT_STRNE(str1, str2)` — different content.
-- `EXPECT_STRCASEEQ(str1, str2)` — same content ignoring case.
-- `EXPECT_STRCASENE(str1, str2)` — different content ignoring case.
-
-**Example:**
-```cpp
-EXPECT_STREQ("hello", greeting);
-EXPECT_STRCASEEQ(user_input, expected_input);
-```
-
-### 6. Floating-Point Comparisons
-
-Because exact equality comparison of floating-point numbers is usually unsafe due to rounding issues, use special floating-point comparisons:
-
-- `EXPECT_FLOAT_EQ` / `ASSERT_FLOAT_EQ` — compares `float` values approximately (within 4 ULPs).
-- `EXPECT_DOUBLE_EQ` / `ASSERT_DOUBLE_EQ` — compares `double` values approximately (within 4 ULPs).
-- `EXPECT_NEAR(val1, val2, abs_error)` / `ASSERT_NEAR` — verifies values differ by no more than `abs_error`.
-
-**Example:**
-```cpp
-EXPECT_DOUBLE_EQ(3.1415, pi_approximation);
-EXPECT_NEAR(calculated_value, expected_value, 0.001);
-```
-
-### 7. Exception Assertions
-
-When exceptions are enabled, GoogleTest allows you to verify exception behavior:
-
-- `EXPECT_THROW(statement, exception_type)` / `ASSERT_THROW(...)` — expects `statement` to throw an exception of specified type.
-- `EXPECT_ANY_THROW(statement)` / `ASSERT_ANY_THROW(...)` — expects any exception.
-- `EXPECT_NO_THROW(statement)` / `ASSERT_NO_THROW(...)` — expects no exceptions.
-
-**Note:** The `statement` can be a compound block wrapped in `{}`.
-
-**Example:**
-```cpp
-EXPECT_THROW(DivideByZero(), std::runtime_error);
-EXPECT_NO_THROW(DoWorkSafely());
-```
-
-### 8. Using Predicates for Custom Conditions
-
-Sometimes a complex logical condition cannot be expressed with built-in matchers or comparisons. You can use predicate assertions:
-
-- `EXPECT_PRED1(pred, val1)`, ..., `EXPECT_PRED5(pred, val1, ..., val5)` and their `ASSERT_` variants.
-- The `pred` is a function or functor returning `bool` when given the arguments.
-
-GoogleTest will print detailed failure messages including argument values if the predicate fails.
-
-**Example:**
-```cpp
-bool IsEven(int n) { return (n % 2) == 0; }
-EXPECT_PRED1(IsEven, value);
-```
-
-For advanced formatting and messages, you can use `EXPECT_PRED_FORMAT` with predicate-formatter functions returning `testing::AssertionResult`.
-
-### 9. Using Matchers with EXPECT_THAT
-
-Use the powerful `EXPECT_THAT(value, matcher)` and `ASSERT_THAT` macros to check conditions with expressive matchers.
-
-Matchers facilitate readable conditions like checking string prefixes, regex, or composite conditions:
+All assertions support streaming a failure message for richer diagnostics:
 
 ```cpp
-using ::testing::StartsWith;
-using ::testing::MatchesRegex;
-
-EXPECT_THAT(my_string, StartsWith("Hello"));
-EXPECT_THAT(code, MatchesRegex("Error .* at line \d+"));
+EXPECT_EQ(value, expected) << "Value mismatch in computation";
+ASSERT_TRUE(condition) << "Precondition failed";
 ```
 
-See the [Matchers Reference](../reference/matchers.md) for an extensive list.
+This message will be displayed on assertion failure.
 
-### 10. Death Assertions
+### 9. Use Predicate Assertions for Complex Conditions
 
-GoogleTest supports testing that code terminates or crashes as expected.
+If testing a boolean predicate over multiple values, use `EXPECT_PRED*` macros:
 
-- `EXPECT_DEATH(statement, regex)` / `ASSERT_DEATH`: expects `statement` to crash and produce stderr output matching `regex`.
-- Variants include `EXPECT_DEATH_IF_SUPPORTED`, `EXPECT_DEBUG_DEATH`, and `EXPECT_EXIT` with predicates.
-
-**Example:**
 ```cpp
-EXPECT_DEATH(DoSomethingUnsafe(), "Segmentation fault");
-EXPECT_EXIT(NormalExit(), ::testing::ExitedWithCode(0), "Success");
+EXPECT_PRED2(GreaterThanSum, a, b);
 ```
 
-### 11. Adding Custom Failure Messages
+Or use `EXPECT_THAT` combined with matchers for rich, descriptive checks.
 
-All assertion macros support streaming a custom message appended to failure reports using the `<<` operator.
+### 10. Use Death Assertions for Testing Process Termination
 
-**Example:**
+Test that code terminates as expected:
+
+- `EXPECT_DEATH(statement, regex)` / `ASSERT_DEATH(statement, regex)`
+- `EXPECT_DEATH_IF_SUPPORTED` if the platform supports death tests
+- `EXPECT_DEBUG_DEATH` for debug builds only
+- `EXPECT_EXIT(statement, predicate, regex)` where predicate inspects exit code
+
+*Example:*
 ```cpp
-EXPECT_EQ(42, GetAnswer()) << "Expected the answer to life";
+EXPECT_DEATH(DangerousOperation(), "Fatal error occurred");
 ```
 
-### 12. Best Practices & Tips
+### Verification and Cleanup
 
-- Use `ASSERT_` assertions for critical conditions that must hold before subsequent test steps.
-- Avoid overusing `EXPECT_` that continue execution if failure leads to nonsensical results.
-- Use matchers and predicates to express readable, maintainable conditions.
-- Always provide custom messages if a failure is not self-explanatory.
-- Use death assertions sparingly and only when testing code expected to abort or crash.
+GoogleTest automatically verifies assertions on test teardown. Remember to avoid mixing `EXPECT_CALL()` and test calls improperly as it causes undefined behavior.
 
 ---
 
 ## Examples & Code Samples
 
-### Basic Boolean Check
+### Example 1: Using Equality and Custom Messages
 ```cpp
-TEST(SimpleTest, BooleanAssertion) {
-  bool condition = SomeFunction();
-  EXPECT_TRUE(condition) << "SomeFunction should return true.";
+TEST(MathTest, Addition) {
+  int result = Add(2, 3);
+  EXPECT_EQ(result, 5) << "Add(2,3) should equal 5";
 }
 ```
 
-### String Equality Check
+### Example 2: Floating Point Comparison
 ```cpp
-TEST(StringTest, CaseInsensitiveCompare) {
-  const char* input = "Google";
-  EXPECT_STRCASEEQ(input, "google");
+TEST(GeometryTest, CircleArea) {
+  double area = CircleArea(1.0);
+  EXPECT_NEAR(area, 3.14159, 1e-5);
 }
 ```
 
-### Floating-Point Approximate Equality
+### Example 3: Exception Checking
 ```cpp
-TEST(MathTest, PiCalculation) {
-  double pi_estimate = CalculatePi();
-  EXPECT_NEAR(pi_estimate, 3.1415926535, 1e-6);
+TEST(ParserTest, ThrowsOnBadInput) {
+  EXPECT_THROW(ParseConfig("bad.config"), std::invalid_argument);
 }
 ```
 
-### Exception Testing
+### Example 4: Death Test
 ```cpp
-TEST(ExceptionTest, ThrowsOnInvalidInput) {
-  EXPECT_THROW(ProcessInput(nullptr), std::invalid_argument);
-}
-```
-
-### Predicate Assertion
-```cpp
-bool IsPrime(int n) {
-  if (n < 2) return false;
-  for (int i = 2; i * i <= n; ++i) {
-    if (n % i == 0) return false;
-  }
-  return true;
-}
-
-TEST(MathTest, PrimeCheck) {
-  EXPECT_PRED1(IsPrime, 7);  // Passes
-  EXPECT_PRED1(IsPrime, 8);  // Fails
-}
-```
-
-### Using Matchers
-```cpp
-#include <gmock/gmock.h>
-using testing::StartsWith;
-
-TEST(StringTest, StartsWithMatcher) {
-  std::string greeting = "Hello, world!";
-  EXPECT_THAT(greeting, StartsWith("Hello"));
-}
-```
-
-### Death Test
-```cpp
-TEST(FatalTest, DeathTestExample) {
-  EXPECT_DEATH(CallCrashFunction(), ".*Segmentation fault.*");
+TEST(AppTest, FatalCondition) {
+  EXPECT_DEATH(AbortOnInvalidState(), "Invalid state");
 }
 ```
 
@@ -278,50 +197,40 @@ TEST(FatalTest, DeathTestExample) {
 ## Troubleshooting & Tips
 
 ### Common Issues
-
-- **Assertion macros run on expressions with side effects:** Remember arguments evaluate exactly once; avoid unexpected side effects in assertion expressions.
-- **Comparing pointers with `EXPECT_EQ` expecting content equality:** Use `EXPECT_STREQ` for C strings.
-- **Floating-point equality using `EXPECT_EQ`:** Use `EXPECT_FLOAT_EQ`, `EXPECT_DOUBLE_EQ`, or `EXPECT_NEAR`.
-- **Exception assertions failing due to disabled exceptions:** Ensure exceptions are enabled in your build.
-- **Death test not working on unsupported platforms:** Use `EXPECT_DEATH_IF_SUPPORTED`.
+- **Assertion executes but test continues unexpectedly:** Use `ASSERT_*` for fatal failures when test must stop.
+- **Floating-point equality failing unexpectedly:** Use `EXPECT_NEAR` or `EXPECT_FLOAT_EQ` instead of `EXPECT_EQ`.
+- **Exception assertions not catching exceptions:** Ensure exceptions are enabled in build settings.
+- **Death tests not running or failing:** Verify platform support and test environment setup.
 
 ### Best Practices
-
-- Favor `EXPECT_` to allow multiple assertions per test unless the failure invalidates further checking.
-- Use clear, descriptive custom messages to clarify assertion intent.
-- Define predicates or matchers for complex assertion logic.
-- Use `EXPECT_THAT` with matchers to write expressive assertions.
-- Validate floating-point calculations with approximate assertions.
+- Use `EXPECT_` when you want to perform multiple checks in a test.
+- Prefer `ASSERT_` when a failure should halt the test immediately to avoid cascading failures.
+- Always add a helpful message with `<<` to clarify failure context.
+- Use appropriate comparison macros for strings (`EXPECT_STREQ`) and floats (`EXPECT_NEAR`).
+- For complex predicates, use `EXPECT_THAT` with matchers to enhance expressiveness.
 
 ### Performance Considerations
-
-- Assertions have minimal performance impact but avoid complex computations inside assertion macros.
-- Use `EXPECT_THAT` with matchers for better diagnostics at low runtime cost.
-
-### Alternative Approaches
-
-- Create custom matchers for domain-specific validation to improve test clarity.
-- Use predicate format assertions (`EXPECT_PRED_FORMAT`) when needing detailed failure messages.
+- Assertions are designed to be lightweight; however, avoid overusing deep matchers inside very tight loops.
 
 ---
 
 ## Next Steps & Related Content
 
-- **What’s Next:** Explore writing and running your first tests to apply assertions practically.
-- **Related Guides:** 
-  - [Writing and Running Your First Test](../getting-started/first-test-debugging/writing-running-first-test.md)
-  - [Matchers Reference](../api-reference/matchers-and-assertions/gmock-matchers.md)
-  - [Mocking Basics](../guides/core-workflows/mocking-basics.md)
-- **Advanced Topics:** Custom assertions, parameterized assertions, and combining assertions.
-- **Resources:** 
-  - [GoogleTest GitHub Repository](https://github.com/google/googletest)
-  - [Assertions Reference](../reference/assertions.md)
-  - [gMock Cookbook](../guides/core-workflows/expectations-behaviors.md)
+- Explore the [Matchers and Value Comparisons](https://github.com/google/googletest/blob/main/docs/reference/matchers.md) guide to deepen your understanding of expressive assertions.
+- Learn about [Using Mock Objects](https://github.com/google/googletest/blob/main/docs/gmock_for_dummies.md) to combine assertions with mocking.
+- For advanced test scenarios, review [Death Tests](https://github.com/google/googletest/blob/main/docs/reference/assertions.md#death) and [Predicate Assertions](https://github.com/google/googletest/blob/main/docs/reference/assertions.md#predicates).
+- Familiarize yourself with [GoogleMock Matchers](https://github.com/google/googletest/blob/main/docs/reference/matching.md) to write more precise mock expectations.
+
+
 
 ---
 
-<Note>
-Remember: `EXPECT_` assertions report failures but continue execution, while `ASSERT_` assertions abort the current function on failure. Choose carefully to get the most precise and meaningful test behavior.
-</Note>
+## References
+
+- GoogleTest Assertions Reference: [`#include <gtest/gtest.h>`](https://github.com/google/googletest/blob/main/docs/reference/assertions.md)
+- GoogleMock Cookbook for Mocking and Actions: [`gmock_cook_book.md`](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md)
+- Guide on [Using Matchers Effectively](https://github.com/google/googletest/blob/main/docs/reference/matchers.md)
+
+
 
 
